Fixed the loading of the articles to load automatically without the reloading the page

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
         <div class="row">
             <div id="holder">
                 <h2>Nice articles</h2>
-                <div id="articles"></div>
+                <div id="articles"><h4>Please Wait...</h4></div>
             </div>
 
             <div id=thisisnote>
